Fixed layout issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,10 +17,22 @@
 
 app-header {
   grid-area: header;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 0px 204px;
+  position:fixed; top:0px; left:0px; right:0px;
+  z-index: 1;
+  width: 100%;
+  
 }
 
 app-navbar {
   grid-area: navbar;
+  position: fixed;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width:215px;
+  padding-top:80px;
 }
 
 app-sidebar {
@@ -50,6 +62,11 @@ app-about {
 
 app-footer {
   grid-area: footer;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 
@@ -68,6 +85,8 @@ app-footer {
 .rightColumn  {
   padding-left: 24px;
   flex: 1;
+  margin-top: 80px;
+  margin-bottom: 60px;
 }
 body {    
   margin: 0 !important;
